[package]
name = "const-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.22"}
id3 = "1.0.2"
metaflac = "0.2"
thiserror = "1.0"
tui = {version = "0.17", default-features = false, features = ['crossterm'] }
walkdir = "2"
